<resources>
    <string name="app_name">HelloTone</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signin_failed">登录失败</string>

    <!-- Register -->
    <string name="register_email">Email</string>
    <string name="register_nickname">Nickname</string>
    <string name="register_password">Password</string>
    <string name="register_repeat_password">Repeat Password</string>
    <string name="register_gender">Choose your gender</string>
    <string name="register_btn">Register New Account</string>
    <string name="register_already">Already has account! Login here</string>
    <string name="register_failed_sth_empty">Please complete all the information</string>
    <string name="register_failed_password_diff">Password different twice</string>
    <string name="register_failed_network">Network problem Register failed!</string>
    <string name="register_failed_already_exist">Email already exist!</string>
    <string name="register_success">Welcome to HelloTone!</string>

    <!-- Login -->
    <string name="login_emial">Email</string>
    <string name="login_password">Password</string>
    <string name="login_btn">Login</string>
    <string name="login_new">New to HelloTone? Register here!</string>
    <string name="login_wrong">Email or Password Wrong!</string>
    <string name="title_activity_setting">SettingActivity</string>

</resources>
