<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.wxc575843.hellotone.start.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff">

       <LinearLayout
           android:orientation="horizontal"
           android:id="@+id/register_header"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:paddingTop="5dp"
           android:paddingBottom="5dp"
           android:gravity="center"
           android:background="@drawable/register_header">
           <ImageView
               android:src="@drawable/register_header_logo"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content" />
       </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_below="@id/register_header">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24"
                android:text="@string/register_email"/>
            <EditText
                android:id="@+id/register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:singleLine="true"
                android:layout_marginBottom="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24"
                android:text="@string/register_nickname"/>

            <EditText
                android:id="@+id/register_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:singleLine="true"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24"
                android:text="@string/register_password"/>

            <EditText
                android:id="@+id/register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:singleLine="true"
                android:layout_marginBottom="20dp"
                android:password="true"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24"
                android:text="@string/register_repeat_password"/>

            <EditText
                android:id="@+id/register_repeat_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:singleLine="true"
                android:layout_marginBottom="20dp"
                android:password="true"/>

            <RadioGroup
                android:id="@+id/register_gender_group"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/register_gender_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="male"/>
                <RadioButton
                    android:id="@+id/register_gender_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="female"/>
            </RadioGroup>

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/register_btn"/>

            <TextView android:id="@+id/link_to_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dip"
                android:layout_marginBottom="40dip"
                android:text="@string/register_already"
                android:gravity="center"
                android:textSize="20dip"
                android:textColor="#025f7c"/>

        </LinearLayout>



    </RelativeLayout>
m

</ScrollView>
